--- a/home/test.html
+++ b/home/test.html
@@ -28,7 +28,7 @@
 				<div class="p-3 text-light bg-dark">
 					<div class="row">
 						<div class="col">
-							<img src="img/logo.png"  class="float-center">
+							<img src="img/logo.png" class="img-fluid">
 						</div>
 					</div>
 					<div class="row mt">
