--- a/home/test.html
+++ b/home/test.html
@@ -10,9 +10,9 @@
 		<meta property="og:title" content="How Much Is a Pint"/>
 		<meta name="description" content="How much is a good old British pint of beer" />
 		<meta property="og:description" content="How much is a good old British pint of beer"/>
-		<meta property="og:image" content="img/square_logo.png"/>
+		<meta property="og:image" content="img/logo.png"/>
 
-		<link rel="icon" type="image/png" href="img/square_logo.png"/>
+		<link rel="icon" type="image/png" href="img/pint.png"/>
 	</head>
 	<body>
  		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
