--- a/home/test.html
+++ b/home/test.html
@@ -67,8 +67,8 @@
 										<div class="col">
 											<h4>
 												<span class="text-warning">Recent pint prices in</span>
-												<span ng-show="!loc_ready" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
-												<span ng-show="loc_ready" class="text-warning">{{home_country}} </span>
+												<span ng-show="working_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
+												<span ng-show="!working_stats" class="text-warning">{{home_country}} </span>
 											</h4>
 										</div>
 									</div>
@@ -89,11 +89,11 @@
 									<div class="row mt-4" >
 										<div class="col">
 											<h4>
-												<span ng-show="!loc_ready" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
+												<span ng-show="working_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
 												<span ng-show="	" class="text-warning">{{headline_stat1}}</span>
 												<span class="text-warning">pint prices in</span>
-												<span ng-show="!loc_ready" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
-												<span ng-show="loc_ready">
+												<span ng-show="working_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
+												<span ng-show="!working_stats">
 													<span ng-show="home_town.length>0" class="text-warning">{{home_town}}<span class="text-muted">, {{home_city}}, {{home_country}}</span></span>
 													<span ng-show="home_town.length==0" class="text-warning">{{home_country}} </span>
 												</span>
@@ -136,7 +136,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75" ng-show="loc_ready">
+								<div class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75" ng-show="working_stats">
 									<div class="row mt-0">
 										<h4><a href="#" class="link-info text-decoration-none text-warning" data-bs-toggle="collapse" data-bs-target="#data_beers">Beers
 											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-expand" viewBox="0 0 16 16">
@@ -184,7 +184,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75" ng-show="loc_ready">
+								<div class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75" ng-show="working_stats">
 									<div class="row mt-0">
 										<h4><a href="#" class="link-info text-decoration-none text-warning" data-bs-toggle="collapse" data-bs-target="#data_pubs">Pubs
 											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-expand" viewBox="0 0 16 16">
@@ -253,7 +253,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75" ng-show="loc_ready">
+								<div class="shadow p-3 mb-4 text-light bg-dark bg-opacity-75" ng-show="working_stats">
 									<div class="row mt-0">
 										<h4><a href="#" class="link-info text-decoration-none text-warning" data-bs-toggle="collapse" data-bs-target="#data_prices">Pint Prices
 											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrows-expand" viewBox="0 0 16 16">
@@ -425,6 +425,7 @@
 				$scope.loggedin = false;
 				$scope.logginin = false
 				$scope.user = 'guest';
+				$scope.working_stats = false
 				
 				$scope.frm_login = {"id": "", "pwd": "", "remember":false};
 				$scope.frm_signup = {email: "", "pwd": ""};
@@ -789,6 +790,7 @@
 			    }
 				$scope.login = function()
 				{
+					$scope.logginin = true;
 					$http.get('https://api.ipgeolocation.io/getip?apiKey=7109be59140c4b538dfc3bacb50a241a').
 						then(function(response)
 						{
@@ -898,6 +900,9 @@
 							});
 
 						$scope.update_location();
+						$scope.loggin = false;
+						$scope.loggedin = true;
+
 					});
 				}
 
@@ -957,9 +962,11 @@
 										}
 									}
 								}
+								$working_stats = false;
 							}, 
 							function(response) 
 							{
+								$working_stats = false;
 							});
 					})
 
