--- a/home/test.html
+++ b/home/test.html
@@ -90,7 +90,7 @@
 										<div class="col">
 											<h4>
 												<span ng-show="working_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
-												<span ng-show="	" class="text-warning">{{headline_stat1}}</span>
+												<span ng-show="!working_stats" class="text-warning">{{headline_stat1}}</span>
 												<span class="text-warning">pint prices in</span>
 												<span ng-show="working_stats" class="spinner-border spinner-border-sm text-warning ms-1 me-1"></span>
 												<span ng-show="!working_stats">
